# nonebot-plugin-onebot-monitor

./: .gitignore  bot.py  pyproject.toml
src/nonebot_plugin_accept_request/: __init__.py  accept_friend_add_request.py  accept_group_add_request.py  accept_group_invite_request.py  config.py
src/nonebot_plugin_onebot_monitor/: __init__.py  approve_request.py  auto_approve_request.py  config.py  handle_request.py  monitor_notice.py  monitor_request.py  notice.py  request.py  utils.py
src/nonebot_plugin_onebot_monitor/models/: __init__.py  notice.py  request.py
src/tests/: __init__.py  mock_data_source.py  mock_map_user_group.py  templates.py  test_approve_request.py  test_handle_request.py  test_monitor_notice.py  test_monitor_request.py
